--- a/public/client/index.html
+++ b/public/client/index.html
@@ -3,13 +3,14 @@
 <head>
   <title>PicDrop Placeholder</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/flexboxgrid/6.3.0/flexboxgrid.min.css" type="text/css" >
+  <link rel="stylesheet" href="styles.css" type="text/css">
 
 </head>
 <body>
 
   <div id="app">
   </div>
-  <script type="text/javascript" src="./bundle.js"></script>
+  <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
