--- a/public/client/index.html
+++ b/public/client/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>PicDrop Placeholder</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="http://cdn.jsdelivr.net/flexboxgrid/6.3.0/flexboxgrid.min.css" type="text/css" >
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/flexboxgrid/6.3.0/flexboxgrid.min.css" type="text/css" >
   <link rel="stylesheet" href="styles.css" type="text/css">
 
 </head>
