--- a/public/client/index.html
+++ b/public/client/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/flexboxgrid/6.3.0/flexboxgrid.min.css" type="text/css" >
   <link rel="stylesheet" href="reset.css" type="text/css">
   <link rel="stylesheet" href="styles.css" type="text/css">
+  <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 </head>
